HTML task 1 completed

--- a/Level1_Task1.html
+++ b/Level1_Task1.html
@@ -15,10 +15,33 @@
         </header>
         <section id="about">
             <h2>About Me</h2>
-            <img src ="" alt="Ankit Subedi" class="Image1">
+            <img src ="photo_2.jpg" alt="Ankit Subedi" class="Image1">
             <p>
-                
+                Hello! I'm a passionate web developer with experience in HTML, CSS, and JavaScript.
             </p>
         </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>ML</li>
+                <li>AI</li>
+                <li>MernStack</li>
+            </ul>
+         <section id="resume">
+            <h2>Resume</h2>
+            <a href="CV.pdf" download>Download My Resume</a>
+        </section>
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:ankitsubedi543@gmail.com">ankitsubedi543@gmail.com</a></p>
+            <p>Phone: +977 9863335185</p>
+        </section>
+        <footer>
+            <p>&copy; 2024 Ankit Subedi</p>
+        </footer>
     </body>
 </html>
